[package]
name = "creak"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
memfd = "0.6"
memmap2 = "0.9"
wayland-client = "0.31"
wayland-protocols = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
cairo-rs = "0.18"
pango = "0.18"
pangocairo = "0.18"
shell-words = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
